--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,10 +14,10 @@
 <body>
 
 <div class="box">
-  <h2>SMARTCARGO-AIPA by May Roga LLC</h2>
+  <h2>SMARTCARGO-AIPA</h2>
   <p>Preventive Documentary Validation System · Does not replace airline decisions</p>
 
-  <button id="langBtn">Español</button>
+  <button onclick="toggleLang()">Español</button>
 
   <!-- PAGE 1 -->
   <div id="page1">
@@ -30,7 +29,6 @@
       <option>Driver</option>
       <option>Warehouse</option>
       <option>Counter</option>
-      <option>Destinatario</option>
     </select><br>
     <button onclick="goStep2()">Continue</button>
   </div>
@@ -49,12 +47,14 @@
     <input id="length" placeholder="Length cm"><br>
     <input id="width" placeholder="Width cm"><br>
     <input id="height" placeholder="Height cm"><br>
+
     <label>DOT Declared?</label>
     <select id="dot">
       <option>No</option>
       <option>Yes</option>
     </select><br>
-    <button onclick="validateCargo()">Validate</button>
+
+    <button onclick="validate()">Validate</button>
   </div>
 
   <!-- RESULT -->
@@ -68,4 +68,3 @@
 
 </body>
 </html>
-
